// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: default 1`] = `
<span>
  Foo
</span>
`;

exports[`should render correctly: disabled 1`] = `
<Tooltip
  overlay="foo bar"
  placement="left"
>
  <span>
    Bar
  </span>
</Tooltip>
`;

exports[`should render correctly: disabled, with explanation 1`] = `
<Tooltip
  overlay="foo bar"
  placement="left"
>
  <span>
    Bar
    <em
      className="small little-spacer-left"
    >
      (
      bar baz
      )
    </em>
  </span>
</Tooltip>
`;

exports[`should render correctly: no label 1`] = `
<span>
  baz
</span>
`;
